// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a background image 1`] = `
<section
  className="MuiBox-root css-1c1kjjx"
>
  <div
    className="MuiBox-root css-1fvs5cv"
    role="presentation"
  />
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-pkd51s-MuiGrid-root"
    >
      <div
        className="MuiStack-root css-qxvcdg-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-nkie9k-MuiTypography-root"
        >
          <span
            className="MuiTypography-root MuiTypography-overline css-1syqjkp-MuiTypography-root"
          >
            overlineTest
          </span>
          <h4
            className="MuiTypography-root MuiTypography-h4 css-1s9j31j-MuiTypography-root"
          >
            titleTest
          </h4>
          <p
            className="MuiTypography-root MuiTypography-body1 css-4peds9-MuiTypography-root"
          >
            descriptionTest
          </p>
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with a background image light 1`] = `
<section
  className="MuiBox-root css-1c1kjjx"
>
  <div
    className="MuiBox-root css-1uhcy84"
    role="presentation"
  />
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-pkd51s-MuiGrid-root"
    >
      <div
        className="MuiStack-root css-qxvcdg-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-8gjfvp-MuiTypography-root"
        >
          <span
            className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
          >
            overlineTest
          </span>
          <h4
            className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
          >
            titleTest
          </h4>
          <p
            className="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
          >
            descriptionTest
          </p>
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with a custom body and background 1`] = `
<section
  className="MuiBox-root css-1c1kjjx"
>
  <div
    className="MuiBox-root css-1fvs5cv"
    role="presentation"
  />
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-pkd51s-MuiGrid-root"
    >
      <div
        className="MuiStack-root css-qxvcdg-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-nkie9k-MuiTypography-root"
        >
          <span
            className="MuiTypography-root MuiTypography-overline css-1syqjkp-MuiTypography-root"
          >
            overlineTest
          </span>
          <h4
            className="MuiTypography-root MuiTypography-h4 css-1s9j31j-MuiTypography-root"
          >
            titleTest
          </h4>
          <div
            className="MuiTypography-root MuiTypography-body1 css-4peds9-MuiTypography-root"
          >
            <p>
              test
            </p>
          </div>
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with a custom body and background light 1`] = `
<section
  className="MuiBox-root css-1c1kjjx"
>
  <div
    className="MuiBox-root css-1uhcy84"
    role="presentation"
  />
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-pkd51s-MuiGrid-root"
    >
      <div
        className="MuiStack-root css-qxvcdg-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-8gjfvp-MuiTypography-root"
        >
          <span
            className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
          >
            overlineTest
          </span>
          <h4
            className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
          >
            titleTest
          </h4>
          <div
            className="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
          >
            <p>
              test
            </p>
          </div>
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly without a background  1`] = `
<section
  className="MuiBox-root css-1rcu9g9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-pkd51s-MuiGrid-root"
    >
      <div
        className="MuiStack-root css-qxvcdg-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-nkie9k-MuiTypography-root"
        >
          <span
            className="MuiTypography-root MuiTypography-overline css-1syqjkp-MuiTypography-root"
          >
            Per i cittadini
          </span>
          <h4
            className="MuiTypography-root MuiTypography-h4 css-1s9j31j-MuiTypography-root"
          >
            Lorem ipsum dolor sit amet, consectetur
          </h4>
          <p
            className="MuiTypography-root MuiTypography-body1 css-4peds9-MuiTypography-root"
          >
            Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly without a background light  1`] = `
<section
  className="MuiBox-root css-14tikk5"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container css-pkd51s-MuiGrid-root"
    >
      <div
        className="MuiStack-root css-qxvcdg-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-8gjfvp-MuiTypography-root"
        >
          <span
            className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
          >
            Per i cittadini
          </span>
          <h4
            className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
          >
            Lorem ipsum dolor sit amet, consectetur
          </h4>
          <p
            className="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
          >
            Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </p>
      </div>
    </div>
  </div>
</section>
`;
